# Deformable-DETR

./: make.sh  setup.cfg  setup.py
deformable_detr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: __init__.py
models/ops/: __init__.py
models/ops/functions/: ms_deform_attn_func.py
models/ops/modules/: ms_deform_attn.py
util/: misc.py
