[metadata]
name = deformable-detr
version = 0.1.0
author = Cédric Picron
author_email = cedric.picron@kuleuven.be
license = Apache 2.0
platform = Linux
description = Deformable DETR (packaged by Cédric Picron)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CedricPicron/Deformable-DETR
classifiers = 
    Programming Language :: Python :: 3
    License :: Apache 2.0 License
    Operating System :: Linux
